--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
+*,
+::before,
+::after{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root{
+  --ff-primary: 'Poppins', sans-serif;
+  --fw-regular: 400;
+  --fw-semibold:600;
+  --fw-bold:700;
+}
+body{
+  font-family: var(--ff-primary);
+}
+img{
+  width: 100%;
+}
+.nav{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  
+  height: 4.5rem;
+  box-shadow:0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+}
+.logo__img{
+  margin-left: 2rem;
+  width: 100px;
+  object-fit: cover;
+  overflow: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.hero{
+  padding: 4rem;
+  
+}
+.hero__img{
+  display: block;
+  max-width: 600px;
+  margin: 0 auto;
+}
+h1{
+  font-weight: 700;
+  font-size: 2.25rem;
+  padding-top: 4rem;
+}
+h4{
+  font-weight: var(--fw-regular);
+  padding-top: 1rem;
+  max-width: 350px;
 }
